# bzrank-plugin

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  bzrank.cpp  bzrank.def  bzrank.sln  bzrank.vcxproj
.deps/: SAMPLE_PLUGIN_la-SAMPLE_PLUGIN.Plo  bzrank_la-bzrank.Plo
